--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-chart.js": "~0.10.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "angular-translate": "~2.11.0"
   },
   "appPath": "app",
   "moduleName": "mmtUiApp",
