--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "~1.2.5",
-    "angular-chart.js": "~0.10.0"
+    "angular-chart.js": "~0.10.0",
+    "angularjs-dropdown-multiselect": "~1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
@@ -27,5 +28,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.5.9"
   }
 }
