--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "~1.2.5",
+    "angular-stripe": "~5.0.0",
     "angular-chart.js": "~0.10.0",
     "angularjs-dropdown-multiselect": "~1.5.2"
   },
