--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,11 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
+    },
+    "angular-stripe": {
+      "main": [
+        "release/angular-stripe.js"
+      ]
     }
   },
   "resolutions": {
